--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,10 +28,8 @@
         {% endif %}
 
         {% if site.show_downloads %}
-        <ul class="downloads">
-          <li><a href="./blog/index.md"><strong>Blog</strong></a></li>
-          <li><a href="./mr-commerce/index.md">Mr Commerce<strong>Coaching Classes</strong></a></li>
-        </ul>
+        <button class="button button5">Blog</button>
+        <button class="button button5">Classes</button>
         {% endif %}
       </header>
       <section>
