--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,8 @@
         {% endif %}
 
         {% if site.show_downloads %}
-        <button class="button button5">Blog</button>
-        <button class="button button5">Classes</button>
+        <button class="button button5" onclick="window.location.href='./blog/index.md';">Blog</button>
+        <button class="button button5" onclick="window.location.href='./classes/index.md';">Classes</button>
         {% endif %}
       </header>
       <section>
