--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,8 @@
         {% endif %}
 
         {% if site.show_downloads %}
-        <button class="button button5" onclick="window.location.href='./blog/index.md';">Blog</button>
-        <button class="button button5" onclick="window.location.href='./classes/index.md';">Classes</button>
+        <button class="button button5" onclick="window.location.href='./blog/';">Blog</button>
+        <button class="button button5" onclick="window.location.href='./classes/';">Classes</button>
         {% endif %}
       </header>
       <section>
