--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./assets/css/buttons.css">
+    <link rel="stylesheet" href="/assets/css/buttons.css">
 
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
@@ -29,8 +29,8 @@
         {% endif %}
 
         {% if site.show_downloads %}
-        <button class="button button5" onclick="window.location.href='./blog/';">Blog</button>
-        <button class="button button5" onclick="window.location.href='./classes/';">Classes</button>
+        <button class="button button5" onclick="window.location.href='/blog/';">Blog</button>
+        <button class="button button5" onclick="window.location.href='/classes/';">Classes</button>
         {% endif %}
       </header>
       <section>
